--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,12 @@
     <string name="btnOSCancelar">Cancelar</string>
     <string name="btnOPPagar">Pagar</string>
     <string name="title_activity_painel_cliente">Painel Cliente</string>
+    <string-array name="listLogin">
+        <item>Selecione o tipo</item>
+        <item>Administrador</item>
+        <item>Cliente</item>
+        <item>Prestador</item>
+    </string-array>
 
 
 </resources>
