--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,8 @@
 <resources>
-    <string name="app_name">Contrato</string>
     <string name="pnlAdm">Painel Administrativo</string>
-    <string name="pnlCliente">Painel do Cliente</string>
-    <string name="pnlPrestador">Painel do Prestador</string>
-    <string name="pnlCadastro">Cadastro-se</string>
+    <string name="pnlCadastro">Cadastre-se</string>
     <string name="btnCadastro">Cadatre-se</string>
     <string name="btnEntrar">Entrar</string>
-    <string name="btnLogin">Acessar</string>
     <string name="title_activity_cliente">Cliente</string>
     <string name="title_activity_prestador">Prestador</string>
     <string name="title_activity_administrador">Administrador</string>
@@ -24,10 +20,6 @@
     <string name="cardCliente">Cliente</string>
     <string name="cardOrdemServico">Ordem de Serviço</string>
     <string name="cardSolicitacaoServico">Solicitacao de Servico</string>
-    <string name="cardPCSolicitacoes">Minhas Solicitações</string>
-    <string name="cardPCOrdemServico">Minhas Ordens de Serviço</string>
-    <string name="cardPPOrdemServico">Minhas Ordens de Serviço</string>
-    <string name="cardPPSolicitacoes">Solicitações em aberto</string>
     <string name="title_activity_ttipo_prestador">Tipo de prestador</string>
     <string name="txtAddTpDesc">Descrição do Tipo Prestaor</string>
     <string name="rbTpAtivo">Ativo</string>
@@ -63,8 +55,6 @@
     <string name="tbTSolicitacao">Solicitações</string>
     <string name="txtDescSolic">Desc. da Solicitacao:</string>
     <string name="llDetSolicitacao">Detalhamento da Solicitação</string>
-    <string name="llDetOrdemPagamento">Detalhamento da Ordem de Pagamento</string>
-    <string name="llDetOrdemServico">Detalhamento da Ordem de Serviço</string>
     <string name="btnSCancelar">Cancelar</string>
     <string name="txtSDCod">Código</string>
     <string name="txtSDData">Data</string>
@@ -72,6 +62,20 @@
     <string name="txtSDCliente">Cliente</string>
     <string name="txtSDEndereco">Endereço</string>
     <string name="txtSDDescricao">Descrição de Serviço</string>
+    <string name="lbl_banco">Banco</string>
+    <string name="lblTipoPrestador">TipoPrestador</string>
+    <string name="lblDataCadastro">DataCadastro</string>
+    <string name="title_menu_cad_pres">Cadastro Prestador</string>
+    <string name="app_name">Contrato</string>
+    <string name="pnlCliente">Painel do Cliente</string>
+    <string name="pnlPrestador">Painel do Prestador</string>
+    <string name="btnLogin">Acessar</string>
+    <string name="cardPCSolicitacoes">Minhas Solicitações</string>
+    <string name="cardPCOrdemServico">Minhas Ordens de Serviço</string>
+    <string name="cardPPOrdemServico">Minhas Ordens de Serviço</string>
+    <string name="cardPPSolicitacoes">Solicitações em aberto</string>
+    <string name="llDetOrdemPagamento">Detalhamento da Ordem de Pagamento</string>
+    <string name="llDetOrdemServico">Detalhamento da Ordem de Serviço</string>
     <string name="txtOSPrestador">Prestador:</string>
     <string name="txtOSCliente">Cliente:</string>
     <string name="txtOSCod">Código</string>
@@ -92,6 +96,7 @@
     <string name="txtLSenha">Senha</string>
     <string name="txtLUsuario">Usuário</string>
     <string name="txtLTipo">Tipo de Acesso</string>
+
     <string-array name="listLogin">
         <item>Selecione o tipo</item>
         <item>Administrador</item>
