--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_cliente">Cliente</string>
     <string name="title_activity_prestador">Prestador</string>
     <string name="title_activity_administrador">Administrador</string>
+    <string name="title_activity_login">Acesse o Sistema</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -106,7 +107,7 @@
         <item>Prestador</item>
     </string-array>
     <string name="title_activity_tminhas_solicitacoes">Minhas Solicitações</string>
-    <string name="title_activity_tsolicitacoes_aberto">TSolicitacoesAberto</string>
+    <string name="title_activity_tsolicitacoes_aberto">Solicitações Aguard. Orçamento</string>
     <string name="title_activity_tsolicitacoes">Solicitações Cadastradas</string>
     <string name="txtAddSolicitacao">Descreva sua necessidade</string>
     <string name="llAddSol">Nova Solicitacao</string>
@@ -114,12 +115,20 @@
     <string name="txtTpPrestador">Tipo de Prestador: </string>
     <string name="btnEditSolAprovar">Aprovar Orçamento</string>
     <string name="btnEditSolCancelar">Cancelar Solicitação </string>
-    <string name="txtSolCod">Código:</string>
+    <string name="txtSolCod">Código</string>
     <string name="txtSolData">Data</string>
     <string name="txtSolStatus">Status</string>
     <string name="txtSolDesc">Descrição</string>
     <string name="txtSolTP">Tipo de Prestador</string>
     <string name="txtSolValor">Valor</string>
     <string name="llEditSolCabec">Dados da Solicitação</string>
+    <string name="title_activity_tsolicitacoesabertas">Solitações em Aberto</string>
+    <string name="txtSolValorPrestador">Informe o valor do serviço: </string>
+    <string name="txtSolCodP">Codigo </string>
+    <string name="txtSolDataP">Data </string>
+    <string name="txtSolStatusP">Status </string>
+    <string name="txtSolDescP">Descrição </string>
+    <string name="txtSolValorP">Informe o valor do serviço </string>
+    <string name="btnEditSolValor">Propor valor</string>
 
 </resources>
